--- a/app/src/main/res/drawable/app_background.xml
+++ b/app/src/main/res/drawable/app_background.xml
@@ -2,10 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid android:color="@color/colorAccent"/>
-    <corners android:radius="10000dp"/>
     <gradient
-        android:type="radial"
-        android:gradientRadius="100%p"
+        android:type="linear"
+        android:angle="90"
         android:startColor="@color/appBackground"
         android:endColor="@color/appBackgroundDark" />
 </shape>
