--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,15 +18,18 @@
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:layout_marginTop="-140dp"
-            android:background="@drawable/circle"></RelativeLayout>
+            android:background="@drawable/circle">
+        </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/sign_in_options"
             android:layout_width="match_parent"
             android:layout_height="70dp">
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
+                app:civ_border_width="2dp"
+                app:civ_border_color="@color/white"
                 android:layout_toLeftOf="@id/already_register_sign_in"
-                android:layout_margin="15dp"
+                android:layout_margin="10dp"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@drawable/google_logo"/>
@@ -38,10 +41,12 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="20dp"
                 android:gravity="center"
-                android:text="already registered?\n SIGN IN"
-                android:textColor="@color/white" />
-            <ImageView
-                android:layout_margin="15dp"
+                android:textStyle="bold"
+                android:text="already registered?\n SIGN IN" />
+            <de.hdodenhof.circleimageview.CircleImageView
+                app:civ_border_color="@color/white"
+                app:civ_border_width="2dp"
+                android:layout_margin="10dp"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@drawable/facebook_logo"
@@ -72,7 +77,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="-10dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="11dp"
                 android:text="E"
                 android:textColor="@color/white"
                 android:textSize="40sp"
