--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="white">#ffffff</color>
+    <color name="appBackground">#f2eaff</color>
+    <color name="appBackgroundDark">#9e60d1</color>
+    <color name="green">#6dbf5f</color>
 </resources>
