--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -4,6 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/app_background"
     tools:context=".ui.activity.RegistrationActivity">
+
+    <com.avenjr.me.me.ui.views.CustomEditText
+        android:layout_width="match_parent"
+        android:layout_height="50dp">
+    </com.avenjr.me.me.ui.views.CustomEditText>
 
 </android.support.constraint.ConstraintLayout>
