--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,141 +6,170 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.activity.MainActivity"
-    android:background="@drawable/activity_main_background">
+    android:background="@color/black">
 
     <RelativeLayout
-        android:id="@+id/top_layout"
-        android:layout_marginTop="-200dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="100dp"
+        android:background="@drawable/activity_main_background">
 
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:layout_marginTop="-140dp"
-            android:background="@drawable/circle">
+            android:id="@+id/top_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="-200dp">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:layout_marginTop="-140dp"
+                android:background="@drawable/circle"></RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/sign_in_options"
+                android:layout_width="match_parent"
+                android:layout_height="70dp">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_margin="10dp"
+                    android:layout_toLeftOf="@id/already_register_sign_in"
+                    android:src="@drawable/google_logo"
+                    app:civ_border_color="@color/white"
+                    app:civ_border_width="2dp" />
+
+                <TextView
+                    android:id="@+id/already_register_sign_in"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="20dp"
+                    android:gravity="center"
+                    android:text="already registered?\n SIGN IN"
+                    android:textStyle="bold" />
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_margin="10dp"
+                    android:layout_toRightOf="@id/already_register_sign_in"
+                    android:src="@drawable/facebook_logo"
+                    app:civ_border_color="@color/white"
+                    app:civ_border_width="2dp" />
+            </RelativeLayout>
         </RelativeLayout>
 
         <RelativeLayout
-            android:id="@+id/sign_in_options"
-            android:layout_width="match_parent"
-            android:layout_height="70dp">
-            <de.hdodenhof.circleimageview.CircleImageView
-                app:civ_border_width="2dp"
-                app:civ_border_color="@color/white"
-                android:layout_toLeftOf="@id/already_register_sign_in"
-                android:layout_margin="10dp"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/google_logo"/>
+            android:id="@+id/logo"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="150dp"
+            android:background="@drawable/logo_background">
 
-            <TextView
-                android:id="@+id/already_register_sign_in"
+            <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="20dp"
-                android:gravity="center"
-                android:textStyle="bold"
-                android:text="already registered?\n SIGN IN" />
-            <de.hdodenhof.circleimageview.CircleImageView
-                app:civ_border_color="@color/white"
-                app:civ_border_width="2dp"
-                android:layout_margin="10dp"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/facebook_logo"
-                android:layout_toRightOf="@id/already_register_sign_in"/>
-        </RelativeLayout>
-        <RelativeLayout
-            android:layout_marginTop="-5dp"
-            android:layout_below="@+id/sign_in_options"
-            android:id="@+id/logo"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_centerHorizontal="true"
-            android:background="@drawable/logo_background">
-            <RelativeLayout
-                android:layout_centerInParent="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-            <TextView
+                android:layout_centerInParent="true">
+
+                <TextView
                 android:id="@+id/logo_first_letter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="M"
                 android:textColor="@color/white"
-                android:textSize="50sp"
-                android:textStyle="bold"/>
-            <TextView
-                android:layout_toEndOf="@+id/logo_first_letter"
+                    android:textSize="45sp"
+                    android:textStyle="bold" />
+
+                <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="-10dp"
                 android:layout_marginTop="11dp"
+                    android:layout_toEndOf="@+id/logo_first_letter"
+                    android:layout_toRightOf="@+id/logo_first_letter"
                 android:text="E"
                 android:textColor="@color/white"
-                android:textSize="40sp"
-                android:textStyle="bold"
-                android:layout_toRightOf="@+id/logo_first_letter" />
+                    android:textSize="35sp"
+                    android:textStyle="bold" />
         </RelativeLayout>
         </RelativeLayout>
     </RelativeLayout>
 
-    <RelativeLayout
+    <android.support.v7.widget.CardView
         android:id="@+id/login_register_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="60dp"
-        android:layout_alignParentBottom="true">
-        <RelativeLayout
-            android:id="@+id/sign_in_button"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:clickable="true"
-            android:background="@drawable/curve_layout"
-            android:focusable="true">
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_margin="10dp"
-                android:src="@drawable/user_sign_in"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:textColor="@color/white"
-                android:text="Sign-In"
-                android:textSize="25sp"
-                android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true"/>
-        </RelativeLayout>
-        <RelativeLayout
-            android:layout_below="@+id/sign_in_button"
-            android:id="@+id/register_button"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/curve_layout">
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="-25dp"
+        app:cardBackgroundColor="@color/lightGray"
+        app:cardCornerRadius="35dp">
 
-            <TextView
-                android:textColor="@color/white"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:text="Register"
-                android:textSize="25sp"
-                android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true"/>
-            <ImageView
-                android:layout_alignParentRight="true"
-                android:layout_width="50dp"
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="60dp"
+            android:layout_marginRight="60dp">
+
+            <RelativeLayout
+                android:id="@+id/sign_in_button"
+                android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_margin="10dp"
-                android:src="@drawable/user_registation"/>
+                android:background="@drawable/curve_layout"
+                android:clickable="true"
+                android:focusable="true">
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_margin="10dp"
+                    android:src="@drawable/user_sign_in" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:text="Sign-In"
+                    android:textColor="@color/white"
+                    android:textSize="25sp"
+                    android:textStyle="bold" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/register_button"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_below="@+id/sign_in_button"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/curve_layout">
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_margin="10dp"
+                    android:src="@drawable/user_registation" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:text="Register"
+                    android:textColor="@color/white"
+                    android:textSize="25sp"
+                    android:textStyle="bold" />
+
+
+            </RelativeLayout>
         </RelativeLayout>
-    </RelativeLayout>
+    </android.support.v7.widget.CardView>
 
 </RelativeLayout>
