--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -1,15 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/app_background"
-    tools:context=".ui.activity.RegistrationActivity">
+    tools:context=".ui.activity.OnboardingActivity">
 
-    <com.avenjr.me.me.ui.views.CustomEditText
+    <com.avenjr.me.me.ui.views.NavigationHeader
+        android:id="@+id/navigation_header"
         android:layout_width="match_parent"
-        android:layout_height="50dp">
-    </com.avenjr.me.me.ui.views.CustomEditText>
+        android:layout_height="55dp"></com.avenjr.me.me.ui.views.NavigationHeader>
 
-</android.support.constraint.ConstraintLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/navigation_header">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <FrameLayout
+                android:id="@+id/fragment_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"></FrameLayout>
+
+            <RelativeLayout
+                android:id="@+id/bottom_navigation"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="@dimen/header_height">
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/reg_back_cv_id"
+                    android:layout_width="@dimen/header_width"
+                    android:layout_height="@dimen/header_width"
+                    app:cardCornerRadius="@dimen/half_of_the_header_width">
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/ic_navigate_back_24dp" />
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/reg_next_cv_id"
+                    android:layout_width="@dimen/header_width"
+                    android:layout_height="@dimen/header_width"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    app:cardCornerRadius="@dimen/half_of_the_header_width">
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/ic_navigate_next_24dp" />
+                </android.support.v7.widget.CardView>
+            </RelativeLayout>
+        </LinearLayout>
+    </ScrollView>
+</RelativeLayout>
