--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -25,14 +25,15 @@
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true">
+            android:layout_below="@+id/navigationHeader"
+            android:layout_marginTop="20dp">
 
             <RelativeLayout
-                android:layout_width="1000dp"
+                android:layout_width="match_parent"
                 android:layout_height="330dp"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
-                android:layout_margin="50dp"
+                android:layout_margin="30dp"
                 android:background="@drawable/sign_in_background">
 
                 <LinearLayout
@@ -42,7 +43,7 @@
                     android:orientation="vertical"
                     android:padding="10dp">
 
-                    <EditText
+                    <com.avenjr.me.me.ui.views.CustomEditText
                         android:id="@+id/signIn_et_id"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
@@ -55,7 +56,7 @@
                         android:padding="10dp"
                         app:addTextChangedListener="@{viewModel.idTextWatcher}" />
 
-                    <EditText
+                    <com.avenjr.me.me.ui.views.CustomEditText
                         android:id="@+id/signIn_et_password"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
@@ -102,45 +103,46 @@
                         android:textStyle="bold" />
                 </android.support.v7.widget.CardView>
             </RelativeLayout>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/navigationHeader"
+            android:layout_centerHorizontal="true">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/logo_background"
+                app:civ_border_color="@color/appBackgroundDark"
+                app:civ_border_width="3dp" />
 
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true">
+                android:layout_centerInParent="true">
 
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:src="@drawable/logo_background"
-                    app:civ_border_color="@color/appBackgroundDark"
-                    app:civ_border_width="3dp" />
-
-                <RelativeLayout
+                <TextView
+                    android:id="@+id/logo_first_letter"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerInParent="true">
+                    android:text="M"
+                    android:textColor="@color/white"
+                    android:textSize="50sp"
+                    android:textStyle="bold" />
 
-                    <TextView
-                        android:id="@+id/logo_first_letter"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="M"
-                        android:textColor="@color/white"
-                        android:textSize="50sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="-10dp"
-                        android:layout_marginTop="11dp"
-                        android:layout_toEndOf="@+id/logo_first_letter"
-                        android:layout_toRightOf="@+id/logo_first_letter"
-                        android:text="E"
-                        android:textColor="@color/white"
-                        android:textSize="40sp"
-                        android:textStyle="bold" />
-                </RelativeLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="-10dp"
+                    android:layout_marginTop="11dp"
+                    android:layout_toEndOf="@+id/logo_first_letter"
+                    android:layout_toRightOf="@+id/logo_first_letter"
+                    android:text="E"
+                    android:textColor="@color/white"
+                    android:textSize="40sp"
+                    android:textStyle="bold" />
             </RelativeLayout>
         </RelativeLayout>
     </RelativeLayout>
