--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="appBackground">#f2eaff</color>
     <color name="appBackgroundDark">#9e60d1</color>
     <color name="green">#6dbf5f</color>
+    <color name="darkGray">#A9A9A9</color>
+    <color name="lightGray">#D3D3D3</color>
+    <color name="gray">#808080</color>
+    <color name="black">#404040</color>
 </resources>
