--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="header_width">50dp</dimen>
     <dimen name="header_height">55dp</dimen>
+    <dimen name="half_of_the_header_width">25dp</dimen>
 </resources>
