Updated the app icon and MainActivity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#ad68e9</color>
+    <color name="colorPrimaryDark">#8e2fea</color>
+    <color name="colorAccent">#010101</color>
     <color name="white">#ffffff</color>
     <color name="appBackground">#f2eaff</color>
     <color name="appBackgroundDark">#9e60d1</color>
