--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
             android:id="@+id/top_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="-200dp">
+            android:layout_marginTop="-300dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -61,41 +61,14 @@
             </RelativeLayout>
         </RelativeLayout>
 
-        <RelativeLayout
+        <ImageView
             android:id="@+id/logo"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="150dp"
-            android:background="@drawable/logo_background">
-
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true">
-
-                <TextView
-                android:id="@+id/logo_first_letter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="M"
-                android:textColor="@color/white"
-                    android:textSize="45sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="-10dp"
-                android:layout_marginTop="11dp"
-                    android:layout_toEndOf="@+id/logo_first_letter"
-                    android:layout_toRightOf="@+id/logo_first_letter"
-                android:text="E"
-                android:textColor="@color/white"
-                    android:textSize="35sp"
-                    android:textStyle="bold" />
-        </RelativeLayout>
-        </RelativeLayout>
+            android:src="@mipmap/ic_launcher_foreground">
+        </ImageView>
     </RelativeLayout>
 
     <android.support.v7.widget.CardView
@@ -105,9 +78,10 @@
         android:layout_alignParentBottom="true"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginBottom="-25dp"
-        app:cardBackgroundColor="@color/lightGray"
-        app:cardCornerRadius="35dp">
+        android:layout_marginBottom="-30dp"
+        app:cardBackgroundColor="@color/appBackground"
+        app:cardCornerRadius="35dp"
+        android:elevation="5dp">
 
         <RelativeLayout
             android:layout_width="wrap_content"
