--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -22,34 +22,15 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"/>
 
-        <LinearLayout
-            android:id="@+id/logo_parent"
+        <ImageView
+            android:id="@+id/logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:src="@mipmap/ic_launcher_round"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/logo_first_letter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="M"
-                android:textColor="@color/white"
-                android:textSize="100sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/logo_second_letter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="-10dp"
-                android:layout_marginLeft="-10dp"
-                android:text="E"
-                android:textColor="@color/white"
-                android:textSize="50sp"
-                android:textStyle="bold" />
-        </LinearLayout>
+        </ImageView>
     </RelativeLayout>
 
 </RelativeLayout>
