--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="darkGray">#A9A9A9</color>
     <color name="lightGray">#D3D3D3</color>
     <color name="gray">#808080</color>
+    <color name="red"> #FF0000</color>
     <color name="black">#404040</color>
 </resources>
