--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -2,6 +2,6 @@
     android:shape="oval">
     <solid android:color="#C0C0C0"/>
     <stroke
-        android:width="2dp"
-        android:color="#ffff"/>
+        android:width="3dp"
+        android:color="@color/black"/>
 </shape>
