--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/app_background"
+    android:background="@color/appBackground"
     tools:context=".ui.activity.OnboardingActivity">
 
     <com.avenjr.me.me.ui.views.NavigationHeader
@@ -40,11 +40,13 @@
             android:id="@+id/reg_back_cv_id"
             android:layout_width="@dimen/header_width"
             android:layout_height="@dimen/header_width"
+            android:background="@drawable/signin_register_background"
             app:cardCornerRadius="@dimen/half_of_the_header_width">
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:padding="5dp"
                 android:src="@drawable/ic_navigate_back_24dp" />
         </android.support.v7.widget.CardView>
 
@@ -59,7 +61,15 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:padding="5dp"
                 android:src="@drawable/ic_navigate_next_24dp" />
         </android.support.v7.widget.CardView>
     </RelativeLayout>
+    <ProgressBar
+        android:id="@+id/onboarding_progress"
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:layout_alignParentBottom="true"
+        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
+        />
 </RelativeLayout>
