--- a/app/src/main/res/layout-land/activity_main_land.xml
+++ b/app/src/main/res/layout-land/activity_main_land.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/main_activity_parent"
     android:background="@color/lightGray">
 
 
@@ -21,6 +22,7 @@
             android:background="@color/appBackground">
 
             <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/sign_in_google"
                 android:layout_width="@dimen/header_height"
                 android:layout_height="@dimen/header_height"
                 android:layout_margin="10dp"
@@ -63,14 +65,16 @@
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginBottom="-30dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            >
 
             <android.support.v7.widget.CardView
                 android:id="@+id/login_register_view"
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
+                android:layout_height="180dp"
                 android:layout_marginBottom="-30dp"
                 app:cardElevation="4dp"
                 app:cardBackgroundColor="@color/appBackground"
@@ -80,8 +84,8 @@
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginBottom="-30dp"
-                    android:background="@drawable/signin_register_background"></android.support.constraint.ConstraintLayout>
+                    android:background="@drawable/signin_register_background">
+                </android.support.constraint.ConstraintLayout>
 
                 <RelativeLayout
                     android:layout_width="wrap_content"
@@ -96,7 +100,8 @@
                         android:layout_height="50dp"
                         android:background="@drawable/curve_layout"
                         android:clickable="true"
-                        android:focusable="true">
+                        android:focusable="true"
+                        android:elevation="4dp">
 
                         <ImageView
                             android:id="@+id/sign_in_image"
@@ -122,8 +127,9 @@
                         android:layout_height="50dp"
                         android:layout_below="@+id/sign_in_button"
                         android:layout_marginTop="10dp"
-                        android:layout_marginBottom="10dp"
-                        android:background="@drawable/curve_layout">
+                        android:layout_marginBottom="20dp"
+                        android:background="@drawable/curve_layout"
+                        android:elevation="4dp">
 
                         <ImageView
                             android:id="@+id/register_image"
