--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -10,7 +10,8 @@
     <com.avenjr.me.me.ui.views.NavigationHeader
         android:id="@+id/navigation_header"
         android:layout_width="match_parent"
-        android:layout_height="55dp"></com.avenjr.me.me.ui.views.NavigationHeader>
+        android:layout_height="55dp">
+    </com.avenjr.me.me.ui.views.NavigationHeader>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -19,29 +20,33 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <FrameLayout
                 android:id="@+id/fragment_container"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"></FrameLayout>
+                android:layout_height="match_parent">
+            </FrameLayout>
 
         </LinearLayout>
     </ScrollView>
+
     <RelativeLayout
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="bottom"
-        android:layout_margin="@dimen/header_height">
+        android:layout_margin="@dimen/header_height"
+        android:gravity="bottom">
 
         <android.support.v7.widget.CardView
             android:id="@+id/reg_back_cv_id"
             android:layout_width="@dimen/header_width"
             android:layout_height="@dimen/header_width"
+            android:layout_margin="5dp"
             android:background="@drawable/signin_register_background"
-            app:cardCornerRadius="@dimen/half_of_the_header_width">
+            app:cardCornerRadius="@dimen/half_of_the_header_width"
+            app:cardElevation="2dp">
 
             <ImageView
                 android:layout_width="match_parent"
@@ -56,7 +61,8 @@
             android:layout_height="@dimen/header_width"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            app:cardCornerRadius="@dimen/half_of_the_header_width">
+            app:cardCornerRadius="@dimen/half_of_the_header_width"
+            app:cardElevation="2dp">
 
             <ImageView
                 android:layout_width="match_parent"
@@ -65,11 +71,11 @@
                 android:src="@drawable/ic_navigate_next_24dp" />
         </android.support.v7.widget.CardView>
     </RelativeLayout>
+
     <ProgressBar
         android:id="@+id/onboarding_progress"
+        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="10dp"
-        android:layout_alignParentBottom="true"
-        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
-        />
+        android:layout_alignParentBottom="true" />
 </RelativeLayout>
