--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.avenjr.me.me.viewmodel.LoginViewModel">
@@ -14,23 +14,25 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/app_background">
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-        <com.avenjr.me.me.ui.views.NavigationHeader
-            android:id="@+id/navigationHeader"
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/header_height">
-        </com.avenjr.me.me.ui.views.NavigationHeader>
+            android:layout_height="wrap_content">
+
+            <com.avenjr.me.me.ui.views.NavigationHeader
+                android:id="@+id/navigationHeader"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/header_height">
+            </com.avenjr.me.me.ui.views.NavigationHeader>
 
             <android.support.constraint.ConstraintLayout
+                android:id="@+id/sign_in_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
 
-                app:layout_constraintTop_toBottomOf="@id/circleImageView"
                 android:layout_margin="20dp"
-                android:background="@drawable/sign_in_background">
+                android:background="@drawable/sign_in_background"
+                app:layout_constraintTop_toBottomOf="@id/circleImageView">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -106,23 +108,24 @@
                 </android.support.v7.widget.CardView>
             </android.support.constraint.ConstraintLayout>
 
-        <android.support.constraint.ConstraintLayout
-            android:id="@+id/circleImageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            <android.support.constraint.ConstraintLayout
+                android:id="@+id/circleImageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
 
-            app:layout_constraintTop_toBottomOf="@id/navigationHeader"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/navigationHeader"
+                app:layout_constraintBottom_toTopOf="@id/sign_in_layout">
 
-            <ImageView
-                android:layout_width="97dp"
-                android:layout_height="100dp"
-                android:padding="10dp"
-                android:src="@mipmap/ic_launcher_foreground"
-                android:background="@drawable/logo_background"
-                android:contentDescription="logo_view" />
+                <ImageView
+                    android:layout_width="97dp"
+                    android:layout_height="100dp"
+                    android:background="@drawable/logo_background"
+                    android:contentDescription="@string/logo_view"
+                    android:padding="10dp"
+                    android:src="@mipmap/ic_launcher_foreground" />
+            </android.support.constraint.ConstraintLayout>
         </android.support.constraint.ConstraintLayout>
-    </android.support.constraint.ConstraintLayout>
     </ScrollView>
 </layout>
