--- a/app/src/main/res/layout/fragment_enter_password.xml
+++ b/app/src/main/res/layout/fragment_enter_password.xml
@@ -9,7 +9,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -29,7 +29,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                app:cardCornerRadius="10dp">
+                app:cardCornerRadius="10dp"
+                app:cardElevation="5dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -45,7 +46,8 @@
                         android:padding="10dp"
                         android:shadowColor="@color/white"
                         android:singleLine="true"
-                        android:textColorHint="@color/gray"></com.avenjr.me.me.ui.views.CustomEditText>
+                        android:textColorHint="@color/gray">
+                    </com.avenjr.me.me.ui.views.CustomEditText>
 
 
                     <com.avenjr.me.me.ui.views.CustomEditText
@@ -56,7 +58,8 @@
                         android:padding="10dp"
                         android:shadowColor="@color/white"
                         android:singleLine="true"
-                        android:textColorHint="@color/gray"></com.avenjr.me.me.ui.views.CustomEditText>
+                        android:textColorHint="@color/gray">
+                    </com.avenjr.me.me.ui.views.CustomEditText>
                 </LinearLayout>
             </android.support.v7.widget.CardView>
 
