--- a/app/src/main/res/layout/fragment_verify_number.xml
+++ b/app/src/main/res/layout/fragment_verify_number.xml
@@ -23,12 +23,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
         app:cardCornerRadius="10dp"
+        app:cardElevation="5dp"
         app:layout_constraintTop_toBottomOf="@id/title">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="10dp">
 
             <com.avenjr.me.me.ui.views.CustomEditText
                 android:id="@+id/reg_email_txt"
@@ -36,9 +32,10 @@
                 android:layout_height="50dp"
                 android:hint="@string/enter_mobile_number"
                 android:padding="10dp"
+                android:layout_margin="10dp"
                 android:shadowColor="@color/white"
                 android:singleLine="true"
-                android:textColorHint="@color/gray"></com.avenjr.me.me.ui.views.CustomEditText>
-        </RelativeLayout>
+                android:textColorHint="@color/gray">
+            </com.avenjr.me.me.ui.views.CustomEditText>
     </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
