--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="gray">#808080</color>
     <color name="red"> #FF0000</color>
     <color name="black">#404040</color>
+    <color name="black_transparent">#a000</color>
 </resources>
