--- a/app/src/main/res/drawable/app_background.xml
+++ b/app/src/main/res/drawable/app_background.xml
@@ -6,5 +6,5 @@
         android:type="linear"
         android:angle="90"
         android:startColor="@color/appBackground"
-        android:endColor="@color/appBackgroundDark" />
+        android:endColor="@color/white" />
 </shape>
