--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,54 +14,6 @@
         android:layout_marginBottom="100dp"
         android:background="@color/lightGray">
 
-        <RelativeLayout
-            android:id="@+id/top_layout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="-250dp">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:layout_marginTop="-140dp"
-                android:background="@drawable/circle"></RelativeLayout>
-
-            <RelativeLayout
-                android:id="@+id/sign_in_options"
-                android:layout_width="match_parent"
-                android:layout_height="70dp">
-
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/sign_in_google"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_margin="10dp"
-                    android:layout_toLeftOf="@id/already_register_sign_in"
-                    android:src="@drawable/google_logo"
-                    app:civ_border_color="@color/white"
-                    app:civ_border_width="2dp" />
-
-                <TextView
-                    android:id="@+id/already_register_sign_in"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="20dp"
-                    android:gravity="center"
-                    android:text="@string/already_registered_n_sign_in"
-                    android:textStyle="bold" />
-
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_margin="10dp"
-                    android:layout_toRightOf="@id/already_register_sign_in"
-                    android:src="@drawable/facebook_logo"
-                    app:civ_border_color="@color/white"
-                    app:civ_border_width="2dp" />
-            </RelativeLayout>
-        </RelativeLayout>
-
         <ImageView
             android:id="@+id/logo"
             android:layout_width="wrap_content"
@@ -70,9 +22,17 @@
             android:layout_marginTop="150dp"
             android:src="@mipmap/ic_launcher_foreground">
         </ImageView>
+        <ImageView
+            android:id="@+id/btn_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_action_location"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/logo"
+            android:layout_margin="@dimen/header_height"/>
     </RelativeLayout>
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/login_register_view"
         android:layout_width="match_parent"
         android:layout_height="200dp"
@@ -84,11 +44,11 @@
         app:cardCornerRadius="35dp"
         android:elevation="5dp">
 
-        <android.support.constraint.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/signin_register_background">
-        </android.support.constraint.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -157,6 +117,6 @@
 
             </RelativeLayout>
         </RelativeLayout>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
