--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -39,7 +39,7 @@
         android:layout_margin="@dimen/header_height"
         android:gravity="bottom">
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:id="@+id/reg_back_cv_id"
             android:layout_width="@dimen/header_width"
             android:layout_height="@dimen/header_width"
@@ -53,9 +53,9 @@
                 android:layout_height="match_parent"
                 android:padding="5dp"
                 android:src="@drawable/ic_navigate_back_24dp" />
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:id="@+id/reg_next_cv_id"
             android:layout_width="@dimen/header_width"
             android:layout_height="@dimen/header_width"
@@ -69,7 +69,7 @@
                 android:layout_height="match_parent"
                 android:padding="5dp"
                 android:src="@drawable/ic_navigate_next_24dp" />
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
     </RelativeLayout>
 
     <ProgressBar
