--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
         <variable
             name="viewModel"
             type="com.avenjr.me.me.viewmodel.LoginViewModel">
@@ -15,7 +14,7 @@
         android:layout_height="match_parent"
         android:background="@drawable/app_background">
 
-        <android.support.constraint.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -25,7 +24,7 @@
                 android:layout_height="@dimen/header_height">
             </com.avenjr.me.me.ui.views.NavigationHeader>
 
-            <android.support.constraint.ConstraintLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/circleImageView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -43,9 +42,9 @@
                     android:contentDescription="@string/logo_view"
                     android:padding="10dp"
                     android:src="@mipmap/ic_launcher_foreground" />
-            </android.support.constraint.ConstraintLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <android.support.constraint.ConstraintLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/sign_in_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -53,7 +52,6 @@
                 android:layout_marginEnd="15dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginStart="15dp"
-                android:background="@drawable/round_30_app_color_background"
                 app:layout_constraintTop_toBottomOf="@id/circleImageView">
 
                 <LinearLayout
@@ -61,7 +59,6 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp"
                     android:orientation="vertical"
                     android:padding="10dp"
                     app:layout_constraintBottom_toTopOf="@+id/signIn_btn_submit"
@@ -77,6 +74,7 @@
                         android:hint="@string/enter_email"
                         android:imeOptions="actionNext"
                         android:padding="10dp"
+                        android:focusableInTouchMode="true"
                         android:singleLine="true"
                         app:addTextChangedListener="@{viewModel.idTextWatcher}" />
 
@@ -90,6 +88,7 @@
                         android:hint="@string/enter_password"
                         android:inputType="textPassword"
                         android:padding="10dp"
+                        android:focusableInTouchMode="true"
                         app:addTextChangedListener="@{viewModel.passwordTextWatcher}" />
 
                     <TextView
@@ -97,14 +96,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_margin="20dp"
+                        android:layout_margin="15dp"
                         android:padding="10dp"
                         android:text="@string/forgot_your_email_passwod"
                         android:textSize="15sp"
                         android:textStyle="bold" />
                 </LinearLayout>
 
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/signIn_btn_submit"
                     android:layout_width="140dp"
                     android:layout_height="40sp"
@@ -125,18 +124,63 @@
                         android:textColor="@color/white"
                         android:textSize="15sp"
                         android:textStyle="bold" />
-                </android.support.v7.widget.CardView>
-            </android.support.constraint.ConstraintLayout>
+                </androidx.cardview.widget.CardView>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <android.support.constraint.ConstraintLayout
-                android:id="@+id/empty_layout"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/header_height"
-                android:layout_marginBottom="8dp"
+                android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/sign_in_layout">
-            </android.support.constraint.ConstraintLayout>
 
-        </android.support.constraint.ConstraintLayout>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                <View
+                    android:id="@+id/view"
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:background="@color/black"
+                    android:layout_marginTop="11dp"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="OR CONTINUE WITH"
+                    android:background="@color/white"
+                    android:layout_margin="2dp"
+                    android:layout_centerHorizontal="true"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                    <RelativeLayout
+                        android:id="@+id/sign_in_options"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="50dp">
+
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:id="@+id/sign_in_google"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:layout_margin="5dp"
+                            android:src="@drawable/google_logo"
+                            app:civ_border_color="@color/white"
+                            app:civ_border_width="2dp" />
+
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:layout_margin="5dp"
+                            android:layout_toRightOf="@id/sign_in_google"
+                            android:src="@drawable/facebook_logo"
+                            app:civ_border_color="@color/white"
+                            app:civ_border_width="2dp" />
+                    </RelativeLayout>
+                </RelativeLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </layout>
