--- a/app/src/main/res/layout/fragment_enter_password.xml
+++ b/app/src/main/res/layout/fragment_enter_password.xml
@@ -21,11 +21,11 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="15dp"
                 android:text="@string/add_your_password"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textSize="25sp"
                 android:textStyle="bold" />
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
@@ -61,7 +61,7 @@
                         android:textColorHint="@color/gray">
                     </com.avenjr.me.me.ui.views.CustomEditText>
                 </LinearLayout>
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
         </LinearLayout>
 
