--- a/app/src/main/res/layout/fragment_verify_number.xml
+++ b/app/src/main/res/layout/fragment_verify_number.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,29 +13,72 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:text="@string/confirm_mobile_number"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"/>
 
-    <android.support.v7.widget.CardView
+    <Spinner
+        android:id="@+id/country_spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title"
+        android:spinnerMode="dropdown"/>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
         app:cardCornerRadius="10dp"
         app:cardElevation="5dp"
-        app:layout_constraintTop_toBottomOf="@id/title">
+        app:layout_constraintTop_toBottomOf="@id/country_spinner">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        <com.avenjr.me.me.ui.views.CustomEditText
+            android:id="@+id/country_code"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:text="+91"
+            android:editable="false"
+            android:background="@null"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp" />
 
             <com.avenjr.me.me.ui.views.CustomEditText
-                android:id="@+id/reg_email_txt"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:id="@+id/reg_mobile_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
                 android:hint="@string/enter_mobile_number"
+                android:background="@null"
                 android:padding="10dp"
                 android:layout_margin="10dp"
                 android:shadowColor="@color/white"
                 android:singleLine="true"
                 android:textColorHint="@color/gray">
             </com.avenjr.me.me.ui.views.CustomEditText>
-    </android.support.v7.widget.CardView>
-</android.support.constraint.ConstraintLayout>
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/approve_reject_image"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="end"
+            android:layout_margin="15dp"
+            android:contentDescription="@string/approve_reject_image" />
+    </androidx.cardview.widget.CardView>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:layout_constraintTop_toBottomOf="@id/parent">
+
+    </View>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
