--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -3,9 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/header_height"
-    android:background="@color/appBackgroundDark">
+    android:background="@color/appBackground"
+    android:elevation="4dp">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/nv_back_btn"
         android:layout_width="35dp"
         android:layout_height="35dp"
@@ -18,27 +19,22 @@
             android:layout_height="25dp"
             android:layout_gravity="center"
             android:src="@drawable/ic_navigate_back_24dp" />
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
-    <android.support.v7.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        app:cardCornerRadius="3dp">
+
 
         <TextView
             android:id="@+id/header_title"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textSize="20sp"
+            android:layout_centerVertical="true"
+            android:gravity="center"
             android:padding="5dp"
-            android:text="@string/app_name" />
+            android:text="@string/app_name"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/nv_next_button"
         android:layout_width="35dp"
         android:layout_height="35dp"
@@ -53,11 +49,11 @@
             android:layout_height="25dp"
             android:layout_gravity="center"
             android:src="@drawable/ic_navigate_next_24dp" />
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/white"
+        android:layout_height="0.5dp"
+        android:background="@color/appBackgroundDark"
         android:layout_alignParentBottom="true">
     </View>
 
