--- a/app/src/main/res/layout/fragment_verify_number.xml
+++ b/app/src/main/res/layout/fragment_verify_number.xml
@@ -5,7 +5,23 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/app_background"
+    android:id="@+id/mobile_number_verification_container"
     tools:context=".ui.fragments.VerifyNumberFragment">
+
+    <com.avenjr.me.me.ui.views.CustomTextView
+        android:id="@+id/skip_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/skip"
+        android:textStyle="bold"
+        android:textAllCaps="true"
+        android:textColor="@color/appBackgroundDark"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginEnd="15dp"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.avenjr.me.me.ui.views.CustomTextView
         android:id="@+id/title"
@@ -16,7 +32,7 @@
         android:textColor="@color/black"
         android:textSize="25sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@+id/skip_button"/>
 
     <Spinner
         android:id="@+id/country_spinner"
