--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/header_height"
     android:background="@color/appBackground"
-    android:elevation="4dp">
+    android:elevation="8dp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/nv_back_btn"
@@ -12,7 +12,8 @@
         android:layout_height="35dp"
         android:layout_centerVertical="true"
         android:layout_margin="10dp"
-        app:cardCornerRadius="18dp">
+        app:cardCornerRadius="18dp"
+        android:visibility="gone">
 
         <ImageView
             android:layout_width="25dp"
@@ -21,9 +22,7 @@
             android:src="@drawable/ic_navigate_back_24dp" />
     </androidx.cardview.widget.CardView>
 
-
-
-        <TextView
+        <com.avenjr.me.me.ui.views.CustomTextView
             android:id="@+id/header_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -32,7 +31,8 @@
             android:padding="5dp"
             android:text="@string/app_name"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:visibility="gone"/>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/nv_next_button"
@@ -42,7 +42,8 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_margin="10dp"
-        app:cardCornerRadius="18dp">
+        app:cardCornerRadius="18dp"
+        android:visibility="gone">
 
         <ImageView
             android:layout_width="25dp"
@@ -50,9 +51,23 @@
             android:layout_gravity="center"
             android:src="@drawable/ic_navigate_next_24dp" />
     </androidx.cardview.widget.CardView>
+
+    <com.avenjr.me.me.ui.views.CustomTextView
+        android:id="@+id/skip_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:text="@string/skip"
+        android:textAllCaps="true"
+        android:layout_marginRight="20dp"
+        android:textSize="15dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:textColor="@color/appBackgroundDark"
+        android:visibility="gone" />
     <View
         android:layout_width="match_parent"
-        android:layout_height="0.5dp"
+        android:layout_height="0.7dp"
         android:background="@color/appBackgroundDark"
         android:layout_alignParentBottom="true">
     </View>
