- Added the onboarding pager implementation.

--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -18,7 +18,9 @@
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/welcome_pager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/header_height"
+        android:layout_marginBottom="100dp"
         app:layout_constraintBottom_toTopOf="@+id/pager_indicator"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
