Added the video controller

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,50 +11,38 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="100dp"
         android:background="@color/lightGray">
 
+        <com.google.android.exoplayer2.ui.PlayerView
+            android:id="@+id/main_screen_player"
+            android:layout_width="match_parent"
+            app:use_controller="false"
+            android:layout_height="match_parent"/>
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="@dimen/header_height"
+            android:layout_height="@dimen/header_height"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/header_height"
+            android:src="@color/white"
+            android:background="@mipmap/ic_launcher_foreground"/>
         <ImageView
             android:id="@+id/logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/header_height"
+            android:layout_height="@dimen/header_height"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="150dp"
+            android:layout_marginTop="@dimen/header_height"
             android:src="@mipmap/ic_launcher_foreground">
         </ImageView>
-        <ImageView
-            android:id="@+id/btn_location"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_action_location"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@+id/logo"
-            android:layout_margin="@dimen/header_height"/>
     </RelativeLayout>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/login_register_view"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="-30dp"
-        app:cardBackgroundColor="@color/appBackground"
-        app:cardCornerRadius="35dp"
-        android:elevation="5dp">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/signin_register_background">
-        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="60dp"
+            android:layout_margin="@dimen/header_height"
+            android:layout_alignParentBottom="true"
             android:layout_marginRight="60dp">
 
             <RelativeLayout
@@ -80,9 +68,7 @@
                     android:layout_centerVertical="true"
                     android:text="@string/sign_in"
                     android:textColor="@color/white"
-                    android:textSize="25sp"
-                    android:textStyle="bold"
-                    android:layout_toRightOf="@+id/sign_in_image" />
+                    android:textSize="25sp" />
             </RelativeLayout>
 
             <RelativeLayout
@@ -91,7 +77,6 @@
                 android:layout_height="50dp"
                 android:layout_below="@+id/sign_in_button"
                 android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
                 android:elevation="4dp"
                 android:background="@drawable/curve_layout">
 
@@ -106,17 +91,11 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toRightOf="@+id/register_image"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
                     android:text="@string/register_user"
                     android:textColor="@color/white"
-                    android:textSize="25sp"
-                    android:textStyle="bold" />
-
-
+                    android:textSize="25sp" />
             </RelativeLayout>
         </RelativeLayout>
-    </androidx.cardview.widget.CardView>
-
 </RelativeLayout>
