--- a/app/src/main/res/drawable/curve_only_top_50.xml
+++ b/app/src/main/res/drawable/curve_only_top_50.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:width="2dp" android:color="#efffff" />
+    <stroke android:width="1dp" android:color="#efffff" />
     <corners android:radius="1dp" android:topLeftRadius="50dp" android:topRightRadius="50dp"
         android:bottomLeftRadius="0dp" android:bottomRightRadius="0dp"/>
-    <solid android:color="@color/lightGray"/>
+    <solid android:color="@color/appBackground"/>
 </shape>
