--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -4,6 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.NavigationActivity">
+    tools:context=".ui.activity.NavigationActivity"
+    android:background="@drawable/app_background">
+
+    <Button
+        android:id="@+id/start_service"
+        android:text="Start Service"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/header_height"
+        android:layout_margin="@dimen/header_height"/>
+
+    <Button
+        android:id="@+id/stop_service"
+        android:text="Stop Service"
+        android:layout_below="@+id/start_service"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/header_height"
+        android:layout_margin="@dimen/header_height"/>
+
 
 </RelativeLayout>
