--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -21,18 +21,10 @@
         android:layout_height="match_parent"
         android:layout_marginTop="@dimen/header_height"
         android:layout_marginBottom="100dp"
-        app:layout_constraintBottom_toTopOf="@+id/pager_indicator"
+        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/navigation_header"/>
-
-    <com.avenjr.me.me.ui.views.CustomPagerIndicator
-        android:id="@+id/pager_indicator"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"/>
 
     <RelativeLayout
         android:id="@+id/relativeLayout"
@@ -62,6 +54,12 @@
                 android:contentDescription="@string/back_button" />
         </androidx.cardview.widget.CardView>
 
+        <com.avenjr.me.me.ui.views.CustomPagerIndicator
+            android:id="@+id/pager_indicator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"/>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/welcome__next"
