--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="black">#404040</color>
     <color name="black_transparent">#a000</color>
     <color name="fent_red">#ff8080</color>
+    <color name="appSecondaryColor">#ebab34</color>
 </resources>
