Updated the recycler view height and width.

--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,13 +8,12 @@
 
     <com.avenjr.me.me.ui.views.CustomTextView
         android:id="@+id/screen_title"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:textSize="@dimen/content_margin"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:gravity="top"
         android:layout_marginStart="10dp" />
 
     <com.google.android.exoplayer2.ui.PlayerView
@@ -23,24 +22,20 @@
         android:layout_height="200dp"
         android:layout_marginTop="10dp"
         app:controller_layout_id="@layout/playerconroller"
-        app:layout_constraintTop_toBottomOf="@+id/screen_title"/>
+        android:layout_below="@+id/screen_title"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/interest_recycler_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/player_view" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/player_view"/>
 
     <ProgressBar
         android:id="@+id/video_progress_bar"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        app:layout_constraintBottom_toBottomOf="@+id/player_view"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/screen_title"
-        app:layout_constraintTop_toTopOf="@+id/player_view" />
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/screen_title"
+        android:layout_above="@+id/interest_recycler_view" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
