--- a/app/src/main/res/layout/welcome_cards.xml
+++ b/app/src/main/res/layout/welcome_cards.xml
@@ -16,7 +16,7 @@
             android:id="@+id/card_image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/ic_action_location"/>
+            android:src="@mipmap/ic_launcher_round"/>
         <TextView
             android:id="@+id/card_text"
             android:layout_width="match_parent"
@@ -24,9 +24,8 @@
             android:layout_gravity="bottom"
             android:text="@string/enter_mobile_number"
             android:textColor="@color/white"
-            android:padding="15dp"
             android:gravity="center"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:background="@drawable/text_view_background"/>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
