- Added the navigation bar.

--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -25,7 +25,8 @@
         android:layout_height="@dimen/header_height"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal"
-        android:baselineAligned="false">
+        android:baselineAligned="false"
+        android:layout_marginBottom="5dp">
 
         <RelativeLayout
             android:layout_width="0dp"
@@ -37,8 +38,7 @@
                 android:layout_width="@dimen/header_height"
                 android:layout_height="match_parent"
                 android:background="@drawable/navigation_circle"
-                android:padding="1dp"
-                android:src="@mipmap/ic_hone_non_active_round"
+                android:padding="2dp"
                 android:layout_centerHorizontal="true"/>
         </RelativeLayout>
 
@@ -52,9 +52,8 @@
                 android:layout_width="@dimen/header_height"
                 android:layout_height="match_parent"
                 android:background="@drawable/navigation_circle"
-                android:padding="5dp"
-                android:layout_centerHorizontal="true"
-                android:src="@drawable/navigation_home_non_active" />
+                android:padding="2dp"
+                android:layout_centerHorizontal="true"/>
         </RelativeLayout>
 
         <RelativeLayout
@@ -68,9 +67,8 @@
                 android:layout_width="@dimen/header_height"
                 android:layout_height="match_parent"
                 android:background="@drawable/navigation_circle"
-                android:padding="1dp"
-                android:layout_centerHorizontal="true"
-                android:src="@mipmap/ic_profile_non_active" />
+                android:padding="2dp"
+                android:layout_centerHorizontal="true"/>
         </RelativeLayout>
 
     </LinearLayout>
