--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -19,7 +19,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:weightSum="3">
+                android:weightSum="4">
 
                 <ImageView
                     android:id="@+id/profile_background"
@@ -36,22 +36,35 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"></androidx.recyclerview.widget.RecyclerView>
+                    android:layout_weight="2"></androidx.recyclerview.widget.RecyclerView>
 
             </LinearLayout>
 
             <RelativeLayout
                 android:id="@+id/profile_image_layout"
                 android:layout_width="100dp"
-                android:layout_height="100dp">
+                android:layout_height="100dp"
+                android:padding="2dp">
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/profile_image"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:src="@color/black"
-                    app:civ_border_color="@color/appSecondaryColor"
-                    app:civ_border_width="5dp" />
+                    app:civ_border_color="@color/white"
+                    app:civ_border_width="7dp" />
+
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    style="?android:attr/progressBarStyleHorizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:max="500"
+                    android:padding="-2dp"
+                    android:progress="100"
+                    android:progressDrawable="@drawable/circular" />
 
             </RelativeLayout>
         </RelativeLayout>
